# frames-ollama-analyzer-V3

./: .gitignore  EXPRESSION_FIX_SUMMARY.md  FITZPATRICK_FIX_PLAN.md  FITZPATRICK_FIX_SUMMARY.md  GEMINI.md  LICENSE  LIPS_BRANCH_SUMMARY.md  README.md  README_REPROMPT.md  REBRANDING_SUMMARY.md  START_HERE.md  app.py  app_complete.py  implementation_plan.md  implementation_plan_character_locking.md  implementation_plan_compact_weighted.md  implementation_plan_lips_skin_precision.md  main.py  pormpt top  pyproject.toml  requirements.txt  run.bat  task.md  test_evolution.py  tmp_list_ollama.py  walkthrough_refactoring.md  workflow_guide.md
config/: prompts.yaml  settings.yaml
core/: database.py  interfaces.py  ollama_adapter.py  prompt_manager.py  result_adapter.py  video_processor.py
docs/: ANALYZER_GUIDE.md  ARCHITECTURE_LOGIC.md  CREATIVE_PHILOSOPHY.md  DEV_JOURNEY.md  DEV_NOTES.md  GIT_RENAMING.md  INDEX.md  INSTALLATION_COMPLETE.md  INTEGRATION_PROMPT.md  POUR_TOI.md  PRD.md  QUICKSTART.md  README.md  RENAMING_GUIDE.md  TRANSPORT_GUIDE.md  TRANSPORT_SYSTEM.md  WORKFLOW_DIAGRAM.md  focus_fidelity_logic.md
docs/assets/: future--prompt idea
docs/tutorials/: concept_injection.md  pourquoi_pas_toujours.md  tuto_injection.py  tuto_refactoring.py
modules/: ollama_frame_analyzer.py
prompts/: default_analysis_prompt.toml  regeneration_optimized_prompt.txt
scripts/: README.md  check_env.bat  export.bat  setup.bat
ui/: components.py
